# UIQM

./: .gitignore  CMakeLists.txt  README.md
copria-pipeline-executor/node_jsons/: UICM.json  UIConM.json  UISM.json
copria-pipeline-executor/src/nodes/Image/: UICM.cpp  UIConM.cpp  UISM.cpp
copria-pipeline-executor/test/nodes/Image/: test_UIQM.json
copria-pipeline-executor/test/nodes/Image/UICM/: test.json
copria-pipeline-executor/test/nodes/Image/UIConM/: test.json
copria-pipeline-executor/test/nodes/Image/UISM/: test.json
src/: main.cpp  uicm.cpp  uicm.h  uiconm.cpp  uiconm.h  uism.cpp  uism.h
